# src/dtos/productStockIn.dto.ts
@@ -1,0 +1,12 @@
+import { IsNumber } from 'class-validator';
+
+export class CreateProductStockInDto {
+  @IsNumber()
+  productId: number;
+  @IsNumber()
+  stockInId: number;
+  @IsNumber()
+  quantity: number;
+  @IsNumber()
+  discount: number;
+}
