# src/dtos/stockIn.dto.ts
@@ -1,4 +1,6 @@
-import { IsNumber, IsDate } from 'class-validator';
+import { IsNumber, IsDate, IsArray, IsObject } from 'class-validator';
+import { IDistributor } from '@interfaces/distributors.interface';
+import { IProduct } from '@interfaces/products.interface';
 
 export class CreateStockInDto {
   @IsNumber()
@@ -6,4 +8,18 @@ export class CreateStockInDto {
 
   @IsDate()
   public createdAt: Date;
+}
+
+export class CreateStockInBodyDto {
+  @IsObject()
+  distributor: IDistributor;
+
+  @IsArray()
+  products: {
+    product: IProduct;
+    quantity: number;
+  }[];
+
+  @IsNumber()
+  discount?: number;
 }
